--- a/index.html
+++ b/index.html
@@ -21,6 +21,37 @@
     <i class="fa-solid fa-bars"></i>
 </a>
         </header>
+        <!-- section1 -->
+        <section class="section1">
+<img class="section1_img" src="image/section1.png" alt="image">
+<p class="section1_text">მიიღე 30%-იანი ფასდაკლება
+    პედიგრის ნებისმიერ 
+    პროდუქციაზე </p>
+        </section>
+<!-- section2 -->
+        <section class="section2">
+<h1>შინაური ცხოველების საკვები</h1>
+ <div class="cards">
+    <div class="card">
+        <img src="image/section2-1.png" alt="">
+    </div>
+    <div class="card">
+        <img src="image/section2-2.png" alt="">
+    </div>
+    <div class="card">
+        <img src="image/section2-3.png" alt="">
+    </div>
+    <div class="card">
+        <img src="image/section2-4.png" alt="">
+    </div>
+    <div class="card">
+        <img src="image/section2-5.png" alt="">
+    </div>
+    <div class="card">
+        <img src="image/section2-6.png" alt="">
+    </div>
+ </div>
+        </section>
     </div>
 </body>
 </html>
