--- a/index.html
+++ b/index.html
@@ -32,24 +32,31 @@
         <section class="section2">
 <h1>შინაური ცხოველების საკვები</h1>
  <div class="cards">
+
     <div class="card">
-        <img src="image/section2-1.png" alt="">
+        <img src="image/section2-1.png" alt="card_img">
     </div>
+
     <div class="card">
-        <img src="image/section2-2.png" alt="">
+        <img src="image/section2-2.png" alt="card_img">
     </div>
+
     <div class="card">
-        <img src="image/section2-3.png" alt="">
+        <img src="image/section2-3.png" alt="card_img">
     </div>
+
     <div class="card">
-        <img src="image/section2-4.png" alt="">
+        <img src="image/section2-4.png" alt="card_img">
     </div>
+
     <div class="card">
-        <img src="image/section2-5.png" alt="">
+        <img src="image/section2-5.png" alt="card_img">
     </div>
+
     <div class="card">
-        <img src="image/section2-6.png" alt="">
+        <img src="image/section2-6.png" alt="card_img">
     </div>
+    
  </div>
         </section>
     </div>
