--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
  <div class="cards">
 
     <div class="card">
-        <img src="image/section2-1.png" alt="card_img">
+        <img class="card_img" src="image/section2-1.png" alt="card_img">
     </div>
 
     <div class="card">
-        <img src="image/section2-2.png" alt="card_img">
+        <img class="card_img" src="image/section2-2.png" alt="card_img">
     </div>
 
     <div class="card">
-        <img src="image/section2-3.png" alt="card_img">
+        <img class="card_img" src="image/section2-3.png" alt="card_img">
     </div>
 
     <div class="card">
-        <img src="image/section2-4.png" alt="card_img">
+        <img class="card_img" src="image/section2-4.png" alt="card_img">
     </div>
 
     <div class="card">
-        <img src="image/section2-5.png" alt="card_img">
+        <img class="card_img" src="image/section2-5.png" alt="card_img">
     </div>
     
     <div class="card">
-        <img src="image/section2-6.png" alt="card_img">
+        <img class="card_img" src="image/section2-6.png" alt="card_img">
     </div>
  </div>
         </section>
