--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         </section>
         <!-- footer -->
         <footer>
-            <div class="footer_div">
+            
 
-                <img src="image/footer_logo.svg" alt="logo">
+                <img class="footer_div" src="image/footer_logo.svg" alt="logo">
 
 
 
@@ -83,7 +83,7 @@
 
                 </div>
 
-            </div>
+
         </footer>
     </div>
 </body>
